1 try of fixing white space while scrolling

--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     left: 0;
     z-index: 90;
-    height: 100%;
+    height: 100vh;
     color: black;
     background-color: white;
     box-sizing: border-box;
